chore: Bump wagmi (#6417)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,16 +32,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@ethersproject/abi": "^5.0.0",
-    "@ethersproject/address": "^5.0.0",
-    "@ethersproject/bignumber": "^5.0.0",
-    "@ethersproject/bytes": "^5.0.0",
-    "@ethersproject/constants": "^5.0.0",
-    "@ethersproject/contracts": "^5.0.0",
     "@ethersproject/experimental": "^5.0.0",
-    "@ethersproject/providers": "^5.0.0",
-    "@ethersproject/strings": "^5.0.0",
-    "@ethersproject/units": "^5.0.0",
     "@gelatonetwork/limit-orders-lib": "^4.1.0",
     "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
     "@next/bundle-analyzer": "13.0.7",
@@ -70,6 +61,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "easymde": "^2.16.1",
+    "ethers": "5.7.2",
     "fast-json-stable-stringify": "^2.1.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
@@ -100,7 +92,7 @@
     "swiper": "^8.4.2",
     "swr": "^2.0.3",
     "typescript": "^4.9.4",
-    "wagmi": "^0.10.10",
+    "wagmi": "^0.12.8",
     "zod": "^3.21.4"
   },
   "devDependencies": {
