--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "storybook": "turbo run start --filter=uikit...",
     "build:storybook": "turbo run build:storybook --filter=uikit...",
     "build": "turbo run build --filter=web...",
+    "fixWagmi": "cp -r Plinga/wagmi/* node_modules/wagmi/ && cp -r Plinga/@wagmi/* node_modules/@wagmi/",
     "start": "turbo run start --filter=web",
     "test:config": "yarn turbo run test:config --filter=[HEAD^1]",
     "test:ci": "yarn turbo run test --filter=[HEAD^1]",
